Got 'tree' mode working. it will navigate back and forth between a tree of items (like a directory structure).

--- a/src/sh-input-select.scss
+++ b/src/sh-input-select.scss
@@ -133,6 +133,24 @@ body {
             overflow-x: hidden;
             overflow-y: auto;
             z-index: 2;
+
+            &.tree-enter {
+                opacity: 0.01;
+            }
+
+            &.tree-enter.example-enter-active {
+                opacity: 1;
+                transition: opacity 500ms ease-in;
+            }
+
+            &.tree-leave {
+                opacity: 1;
+            }
+
+            &.tree-leave.example-leave-active {
+                opacity: 0.01;
+                transition: opacity 300ms ease-in;
+            }
         }
     }
 
