fixed 2 bugs, one was switching whether the dropdown went up or down while it was already out (sic)... the other was hot keys were still triggering default browser functionality. stopped that.

--- a/example/app.scss
+++ b/example/app.scss
@@ -7,7 +7,15 @@ body {
     left: 0;
     right: 0;
     margin: 0;
-    padding: 20px;
 
     background: linear-gradient($color-secondary, $color-thirdary) fixed;
+}
+
+#app {
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+
+    box-sizing: border-box;
+    overflow: auto;
 }
