Added an error styles made validation happen on close rather then open

--- a/src/sh-input-select.scss
+++ b/src/sh-input-select.scss
@@ -35,6 +35,14 @@
         }
     }
 
+    &.sh-invalid {
+        &.sh-touched {
+            .input {
+                border: 1px solid $color-error;
+            }
+        }
+    }
+
     &.opened {
         &.open-up {
             .input {
